# medical-rag-es-eu

./: .gitignore  EXPERIMENTS.md  LICENSE  README.md  pyproject.toml
SNS_1064/: acl2020.sty  bibliography.bib  main.tex
docs/: bibliography_notes.md  metrics.md  plan_extract.md  prompts.md  reading_list.md  reading_list_v1.md  supervisor_meeting2_notes.md  supervisor_meeting_notes.md
manuscript/: appendix_es_casimedicos.tex  appendix_es_mixed.tex  appendix_es_sns1064.tex  appendix_eu_casimedicos_eu.tex  appendix_eu_mixed_eu.tex  appendix_eu_sns1064_eu.tex  bibliography.bib  main.aux  main.bbl  main.blg  main.lof  main.lot  main.tex  main.toc  main_table_es_casimedicos.tex  main_table_es_mixed.tex  main_table_es_sns1064.tex  main_table_eu_casimedicos_eu.tex  main_table_eu_mixed_eu.tex  main_table_eu_sns1064_eu.tex  template.tex
scripts/: aggregate_runs.py  analyze_conflict_calibration.py  build_retrieval_index.py  chain_reasoning_es_nothink.sh  chain_reasoning_eu_latxa_topk1.sh  chain_reasoning_summary_update.sh  check_no_truncation.py  check_translation_integrity.py  create_amplified_dataset.py  create_llama_latxa_eu_configs.py  create_qwen35_4b_spanish_configs.py  create_qwen35_9b_spanish_configs.py  create_qwen3_8b_sf_configs.py  create_qwen3_8b_spanish_configs.py  create_reasoning_pipeline_configs.py  evaluate_predictions.py  evaluate_predictions_by_source.py  format_casimedicos.py  import_casimedicos_arg.py  import_casimedicos_exp.py  meanq.py  measure_latency.py  metric_tables.py  mixed_agentic_tasks.py  patch_mc_accuracy.py  pick_free_gpu.sh  prepare_sns1064.py  (+32 more)
(+1778 files in other folders)
