[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-rag-thesis"
version = "0.1.0"
description = "Data preparation and first experiments for a Spanish medical RAG MA thesis."
requires-python = ">=3.9"
dependencies = [
  "accelerate",
  "bert-score",
  "datasets",
  "numpy",
  "pandas",
  "scikit-learn",
  "sentence-transformers",
  "torch",
  "transformers",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
